--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,34 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Responsive Layout</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<h1>hello coursera again</h1>
+<h1>Our Menu</h1>
+
+<div class="container">
+	<div class="row">
+		<section class="col-lg-4 col-md-6 col-sm-12">
+			<div class="description">
+				<p id="section-title-1"> Chicken </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam blandit, elit vitae laoreet vulputate, lorem mauris mattis sem, et gravida sapien orci nec urna. Proin a auctor orci, a elementum.</p>
+			</div>
+		</section>
+		<section class="col-lg-4 col-md-6 col-sm-12">
+			<div class="description">
+				<p id="section-title-2"> Beef </p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam blandit, elit vitae laoreet vulputate, lorem mauris mattis sem, et gravida sapien orci nec urna. Proin a auctor orci, a elementum.</p>
+			</div>
+		</section>
+		<section class="col-lg-4 col-md-12 col-sm-12">
+			<div class="description">
+				<p id="section-title-3"> Sushi </p>
+				<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam blandit, elit vitae laoreet vulputate, lorem mauris mattis sem, et gravida sapien orci nec urna. Proin a auctor orci, a elementum.</p>
+			</div>
+		</section>
+	</div>
+</div>
+
 </body>
 </html>
